--- a/SimpleConverter.csproj
+++ b/SimpleConverter.csproj
@@ -84,6 +84,8 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RecipesToBeConv.cs" />
+    <Compile Include="RecipeToBeConv.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
